--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
     <title>Personal Website</title>
 </head>
 <body>
-    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <div class="container">
         <nav>
             <div class="logo">codio<b>.</b></div>
@@ -22,7 +20,7 @@
             <div class="links">
                 <a href="#"><i class="fab fa-linkedin"></i></a>
                 <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-github"></i></a>
             </div>
         </nav>
         <div class="wrapper">
@@ -47,7 +45,7 @@
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <script>
         var typingEffect = new Typed(".multiText", {
-            strings : ["coder", "designer"],
+            strings : ["Sangwoo", "Developer"],
             loop : true,
             typeSpeed : 100,
             backSpeed : 80,
