--- a/index.html
+++ b/index.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="kr">
 <head>
     <meta charset="UTF-8">
-    <!-- Add icon library -->
     <link rel = "stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel = "stylesheet" href="style.css">
-    <title>Personal Website</title>
+    <title>S. PARK</title>
 </head>
 <body>
     <div class="container">
         <nav>
-            <div class="logo">codio<b>.</b></div>
+            <div class="logo"><a href="index.html" style="text-decoration:none">spark</a></div>
             <ul class="navItems">
-                <li><a href="#">home</a></li>
-                <li><a href="#">about</a></li>
-                <li><a href="#">skills</a></li>
-                <li><a href="#">contact</a></li>
+                <li><a href="index.html">home</a></li>
+                <li><a href="about.html">about</a></li>
+                <li><a href="skills.html">skills</a></li>
+                <li><a href="contact.html">contact</a></li>
             </ul>
             <div class="links">
                 <a href="#"><i class="fab fa-linkedin"></i></a>
@@ -35,8 +34,8 @@
             </div>
             <div class="cols cols1">
                 <div class="imgbox">
-                    <img src="splash.png" id="splash">
-                    <img src="img.png">
+                    <img src="./imgs/splash.png" id="splash">
+                    <img src="./imgs/brain.png">
                 </div>
             </div>
         </div>
@@ -53,6 +52,5 @@
         })
     </script>
 </body>
-
 
 </html>
