about_page_roughcopy_update1

--- a/contact.html
+++ b/contact.html
@@ -18,9 +18,9 @@
                 <li><a href="contact.html">contact</a></li>
             </ul>
             <div class="links">
-                <a href="#"><i class="fab fa-linkedin"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/sangwoo-park-61902b66/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                <a href="https://www.instagram.com/sankoo_park/" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="https://github.com/Luna0214" target="_blank"><i class="fab fa-github"></i></a>
             </div>
         </nav>
 </body>
