--- a/index.html
+++ b/index.html
@@ -4,34 +4,40 @@
     <meta charset="UTF-8">
     <link rel = "stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel = "stylesheet" href="style.css">
-    <title>S. PARK</title>
+    <title>S. PARK | Home</title>
 </head>
 <body>
     <div class="container">
         <nav>
+            <!--Logo link-->
             <div class="logo"><a href="index.html" style="text-decoration:none">spark</a></div>
+            <!--nav menu-->
             <ul class="navItems">
                 <li><a href="index.html">home</a></li>
                 <li><a href="about.html">about</a></li>
                 <li><a href="skills.html">skills</a></li>
                 <li><a href="contact.html">contact</a></li>
             </ul>
+            <!--SNS links-->
             <div class="links">
-                <a href="#"><i class="fab fa-linkedin"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/sangwoo-park-61902b66/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                <a href="https://www.instagram.com/sankoo_park/" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="https://github.com/Luna0214" target="_blank"><i class="fab fa-github"></i></a>
             </div>
         </nav>
+        <!--Home banner-->
         <div class="wrapper">
             <div class="cols cols0">
                 <span class="topline">Hello</span>
                 <h1>I'm <span class="multiText"></span></h1>
                 <p>Greetings! I hope you like this website.</p>
+                <!--botton1&2-->
                 <div class="btns">
                     <button>Download Resume</button>
                     <button>Contact Me</button>
                 </div>
             </div>
+            <!--home images-->
             <div class="cols cols1">
                 <div class="imgbox">
                     <img src="./imgs/splash.png" id="splash">
@@ -40,7 +46,7 @@
             </div>
         </div>
     </div>
-
+    <!--typing effect-->
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <script>
         var typingEffect = new Typed(".multiText", {
