--- a/about.html
+++ b/about.html
@@ -18,9 +18,34 @@
                 <li><a href="contact.html">contact</a></li>
             </ul>
             <div class="links">
-                <a href="#"><i class="fab fa-linkedin"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/sangwoo-park-61902b66/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                <a href="https://www.instagram.com/sankoo_park/" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="https://github.com/Luna0214" target="_blank"><i class="fab fa-github"></i></a>
             </div>
         </nav>
+        <div class="banner">
+            <h2>About S. Park</h2>
+        </div>
+        <!--About Section-->
+        <div class="profile-section">
+            <img id="profile-picture" src="./imgs/about.jpg">
+            <div class="intro">
+                <h2>About Me</h2>
+                <p>"기획, 디자인, 개발까지 하는 인간 스타트업이 되도록 노력중"
+                    <br> 컴퓨터과학과 졸업예정, 인공지능 분야 전문가로 거듭나기
+                    위해 공부 중입니다. 실무 기획은 아니지만 교육 프로그램에서
+                    프로젝트 별 기획 경험이 있고 디자인은 Adobe Tool 들을 몇 가지
+                    잘 다룰 수 있습니다. 개발은 인공지능 휴먼포즈 교육과정을 수료했고
+                    현재도 크고 작은 개인 프로젝트로 공부 중입니다. 저는 즐겁지만
+                    약간의 긴장감을 가지고 업무에 임하는 편입니다. 우리 한번 잘 지내봐요!
+                </p>
+            </div>
+        </div>
+    </div>
 </body>
+<footer>
+    <div class="footer-section">
+        <h5>Author: Sangwoo Park</h5>
+        <p>ⓒ 2023 SPARK Personal Website. All rights reserved.</p>
+    </div>
+</footer>
