skills_page_updated

--- a/contact.html
+++ b/contact.html
@@ -23,4 +23,18 @@
                 <a href="https://github.com/Luna0214" target="_blank"><i class="fab fa-github"></i></a>
             </div>
         </nav>
+        <div class="banner">
+            <h2>Contact</h2>
+        </div>
+        <!--Contact Section-->
+        <div class="contact-section">
+
+        </div>
+
 </body>
+<footer>
+    <div class="footer-section">
+        <h5>Author: Sangwoo Park</h5>
+        <p>ⓒ 2023 SPARK Personal Website. All rights reserved.</p>
+    </div>
+</footer>
