--- a/index.html
+++ b/index.html
@@ -58,5 +58,10 @@
         })
     </script>
 </body>
-
+<footer>
+    <div class="footer-section">
+        <h5>Author: Sangwoo Park</h5>
+        <p>ⓒ 2023 SPARK Personal Website. All rights reserved.</p>
+    </div>
+</footer>
 </html>
