--- a/skills.html
+++ b/skills.html
@@ -23,4 +23,71 @@
                 <a href="https://github.com/Luna0214" target="_blank"><i class="fab fa-github"></i></a>
             </div>
         </nav>
+        <div class="banner">
+            <h2>My Skills</h2>
+        </div>
+        <!--Skills Section-->
+        <div class="skill-section">
+            <div class="skill-box">
+                <div class="skill-title">
+                    <div class="skill-img">
+                        <img src="./imgs/Python_logo.png"  class="skill-icon">
+                    </div>
+                    <h3>Python</h3>
+                </div>
+                <p>Django, Pandas, OpenCV, tensorflow, sklearn, etc.</p>
+            </div>
+            <div class="skill-box">
+                <div class="skill-title">
+                    <div class="skill-img">
+                        <img src="./imgs/MySQL_logo.png" class="skill-icon">
+                    </div>
+                    <h3>MySQL</h3>
+                </div>
+                <p>Interfere with APIs and Pandas. Building database infrastructure.</p>
+            </div>
+            <div class="skill-box">
+                <div class="skill-title">
+                    <div class="skill-img">
+                        <img src="./imgs/Linux_logo.png" class="skill-icon">
+                    </div>
+                    <h3>Linux</h3>
+                </div>
+                <p>Developing in Linux environment. Such as AWS EC2 instance server, Oracle Cloud Server.</p>
+            </div>
+            <div class="skill-box">
+                <div class="skill-title">
+                    <div class="skill-img">
+                        <img src="./imgs/java_logo.png" class="skill-icon">
+                    </div>
+                    <h3>Java</h3>
+                </div>
+                <p>SpringBoot, Gradle, Hyperledger Fabric Blockchain, etc.</p>
+            </div>
+            <div class="skill-box">
+                <div class="skill-title">
+                    <div class="skill-img">
+                        <img src="./imgs/github_logo.png" class="skill-icon">
+                    </div>
+                    <h3>Github</h3>
+                </div>
+                <p>Group project co-working experienced.</p>
+            </div>
+            <div class="skill-box">
+                <div class="skill-title">
+                    <div class="skill-img">
+                        <img src="./imgs/photoshop_logo.png" class="skill-icon">
+                    </div>
+                    <h3>Adobe Tools</h3>
+                </div>
+                <p>Adobe Photoshop, Illustrator, and Premiere Pro</p>
+            </div>
+
+        </div>
 </body>
+<footer>
+    <div class="footer-section">
+        <h5>Author: Sangwoo Park</h5>
+        <p>ⓒ 2023 SPARK Personal Website. All rights reserved.</p>
+    </div>
+</footer>
