contact_page_update

--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,20 @@
         </div>
         <!--Contact Section-->
         <div class="contact-section">
-
+            <div class="contact-box">
+                <div class="contact-icon">
+                    <i class="fas fa-envelope"></i>
+                </div>
+                <h3>Email</h3>
+                <p>scz2403@naver.com</p>
+            </div>
+            <div class="contact-box">
+                <div class="contact-icon">
+                    <i class="fas fa-mobile"></i>
+                </div>
+                <h3>Phone</h3>
+                <p>+82 10-4953-1218</p>
+            </div>
         </div>
 
 </body>
