--- a/skills.html
+++ b/skills.html
@@ -30,6 +30,7 @@
         <div class="skill-section">
             <div class="skill-box">
                 <div class="skill-title">
+                    <!--Skill Icons-->
                     <div class="skill-img">
                         <img src="./imgs/Python_logo.png"  class="skill-icon">
                     </div>
