--- a/about.html
+++ b/about.html
@@ -31,13 +31,20 @@
             <img id="profile-picture" src="./imgs/about.jpg">
             <div class="intro">
                 <h2>About Me</h2>
+                <p>"Trying to be a human startup that planning, designing, and developing at same time"
+                    <br> Studying in Computer Science department in college to be an A.I. expert.
+                    I have some develop planning experience between the A.I. enginner educationa and trainning program that
+                    established by South Korea government. Furthermore, I know how to design images and videos that I needed
+                    during the previouse projects(Adobe Design Tools). Now I am studying with my toy projects.
+                    I am a very bright person but still have some tension to be successful at work.
+                </p>
                 <p>"기획, 디자인, 개발까지 하는 인간 스타트업이 되도록 노력중"
                     <br> 컴퓨터과학과 졸업예정, 인공지능 분야 전문가로 거듭나기
                     위해 공부 중입니다. 실무 기획은 아니지만 교육 프로그램에서
                     프로젝트 별 기획 경험이 있고 디자인은 Adobe Tool 들을 몇 가지
                     잘 다룰 수 있습니다. 개발은 인공지능 휴먼포즈 교육과정을 수료했고
                     현재도 크고 작은 개인 프로젝트로 공부 중입니다. 저는 즐겁지만
-                    약간의 긴장감을 가지고 업무에 임하는 편입니다. 우리 한번 잘 지내봐요!
+                    약간의 긴장감을 가지고 업무에 임하는 편입니다.
                 </p>
             </div>
         </div>
