--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
             </div>
         </nav>
         <div class="banner">
-            <h2>Contact</h2>
+            <h2>Contact INFO</h2>
         </div>
         <!--Contact Section-->
         <div class="contact-section">
@@ -41,6 +41,13 @@
                 </div>
                 <h3>Phone</h3>
                 <p>+82 10-4953-1218</p>
+            </div>
+            <div class="contact-box">
+                <div class="contact-icon">
+                    <i class="fa-solid fa-house"></i>
+                </div>
+                <h3>Address</h3>
+                <p>Seoul, South Korea</p>
             </div>
         </div>
 
