--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
                 <span class="topline">Hello</span>
                 <h1>I'm <span class="multiText"></span></h1>
                 <p>Greetings! I hope you like this website.</p>
-                <!--botton1&2-->
+                <!--bottons-->
                 <div class="btns">
-                    <button>Download Resume</button>
-                    <button>Contact Me</button>
+                    <button type="button" onclick="location.href='skills.html'">What Can I do for you?</button>
+                    <button type="button" onclick="location.href='contact.html'">Contact Me</button>
                 </div>
             </div>
             <!--home images-->
