--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
             </ul>
             <div class="links">
                 <a href="https://www.linkedin.com/in/sangwoo-park-61902b66/" target="_blank"><i class="fab fa-linkedin"></i></a>
-                <a href="https://www.instagram.com/sankoo_park/" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.instagram.com/7feethigh/" target="_blank"><i class="fab fa-instagram"></i></a>
                 <a href="https://github.com/Luna0214" target="_blank"><i class="fab fa-github"></i></a>
             </div>
         </nav>
@@ -40,7 +40,7 @@
                     <i class="fas fa-mobile"></i>
                 </div>
                 <h3>Phone</h3>
-                <p>+82 10-4953-1218</p>
+                <p>+82 10-7469-3993</p>
             </div>
             <div class="contact-box">
                 <div class="contact-icon">
